# zynq_linux

./: .gitignore  INSTALL.txt  Module.symvers  image.sh  ramdisk.sh  ramdisk.sh.old  uEnv.txt
kernel/: my_zynq_defconfig
kernel/drivers/: rpmsg_proxy_dev_driver.c  rpmsg_user_dev_driver.c
linux/: wlan0  wpa_supplicant.conf
projects/axi4/: .gitignore  axi4.tcl  axi4_preset.tcl  bootbin.tcl  devicetree.dtb  devicetree.tcl  fsbl.tcl  hwdef.tcl  system_axi4.dts  u-boot.elf  zybo_axi4.xdc
projects/axi4_lite/: .gitignore  all.bat  axi4_lite.tcl  axi4_lite_preset.tcl  bootbin.tcl  devicetree.dtb  devicetree.tcl  fsbl.tcl  hwdef.tcl  system_axi4_lite.dts  zybo_axi4_lite.xdc
projects/axidma/: .gitignore  axidma.tcl  axidma_preset.tcl  bootbin.tcl  devicetree.dtb  devicetree.tcl  fsbl.tcl  hwdef.tcl  system_axidma.dts
projects/gpio/: .gitignore  bootbin.tcl  devicetree.dtb  devicetree.tcl  fsbl.tcl  gpio.tcl  gpio_preset.tcl  hwdef.tcl  system_gpio.dts  zybo_gpio.xdc
projects/gpio/gpio_sw/mmap/lib/: CMakeLists.txt
projects/gpio/gpio_sw/mmap/lib/ps7_cortexa9_0/include/: xparameters.h
projects/gpio/gpio_sw/mmap/lib/ps7_cortexa9_0/libsrc/gpio_v4_0/src/: xgpio_g.c
projects/hdmi_out/: .gitignore  bootbin.tcl  devicetree.dtb  devicetree.tcl  fsbl.tcl  hdmi_out.tcl  hdmi_out_preset.tcl  hier_hdmi_out.tcl  (+4 more)
sw/: arm-linux-gnueabihf.cmake  cling.txt
u-boot/: zynq-zyboc.dts  zynq_zyboc.h  zynq_zyboc_defconfig
vivado/: bootbin.tcl  devicetree.dtb  devicetree.tcl  embedded_linux.tcl  embedded_linux_preset.tcl  fsbl.tcl  hwdef.tcl  system.dts  u-boot.elf  zybo.xdc
(+131 files in other folders)
